Fix z-index of tileEditButtons

--- a/src/redturtle/tiles/management/browser/static/integration.css
+++ b/src/redturtle/tiles/management/browser/static/integration.css
@@ -5,7 +5,7 @@ div.loading-tiles {
 
 .editableTiles .tileEditButtons {
     position: absolute;
-    z-index: 9999;
+    z-index: 100;
     background: #FFF5CD;
     top: 15px;
     right: 15px;
